<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorWhite">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_48"
        >
        <ImageView
            android:background="?attr/selectableItemBackground"
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/view_space_4"
            android:padding="@dimen/view_space_10"
            android:src="@drawable/back_iv"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/view_space_18"
        android:layout_marginTop="@dimen/view_space_28"
        android:text="@string/set_new_pwd"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/input_new_pwd_cet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_54"
        android:background="@null"
        android:hint="@string/please_enter_password"
        android:paddingLeft="@dimen/view_space_18"
        android:textCursorDrawable="@drawable/shape_common_cursor"
        android:layout_marginTop="@dimen/view_space_48"
        android:paddingRight="@dimen/view_space_18"
        android:textColor="@color/colorBlack"
        android:textColorHint="#c1c1c1"
        android:inputType="textPassword"
        android:textSize="@dimen/text_size_18"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size_0.5"
        android:layout_marginLeft="@dimen/view_space_18"
        android:layout_marginRight="@dimen/view_space_18"
        android:background="@color/diver_bg"
        />
    <EditText
        android:id="@+id/input_new_pwd_again_cet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_54"
        android:background="@null"
        android:hint="@string/please_enter_password_again"
        android:paddingLeft="@dimen/view_space_18"
        android:textCursorDrawable="@drawable/shape_common_cursor"
        android:paddingRight="@dimen/view_space_18"
        android:textColor="@color/colorBlack"
        android:textColorHint="#c1c1c1"
        android:inputType="textPassword"
        android:textSize="@dimen/text_size_18"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size_0.5"
        android:layout_marginLeft="@dimen/view_space_18"
        android:layout_marginRight="@dimen/view_space_18"
        android:background="@color/diver_bg"
        />
    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_44"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/view_space_8"
        android:layout_marginLeft="@dimen/view_space_22"
        android:layout_marginRight="@dimen/view_space_22"
        android:layout_marginTop="@dimen/view_space_40"
        android:background="@drawable/selector_login_btn"
        android:text="@string/isok"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_16"
        style="?android:attr/borderlessButtonStyle"
        />
</LinearLayout>