<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_44">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/view_space_4"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/view_space_10"
            android:src="@drawable/back_iv" />

        <TextView
            android:id="@+id/go_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/view_space_4"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/view_space_10"
            android:text="@string/register"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_18" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/head_iv"
            android:layout_width="@dimen/view_height_90"
            android:layout_height="@dimen/view_height_90"
            android:layout_below="@+id/toolbar_ll"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/view_space_28"
            android:src="@drawable/ic_user_face_default"></ImageView>


        <LinearLayout
            android:id="@+id/phone_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv"
            android:layout_marginTop="@dimen/view_space_28"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/view_space_16"
                android:layout_height="@dimen/view_space_16"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/view_space_22"
                android:src="@drawable/icon_login_user">

            </ImageView>

            <EditText
                android:id="@+id/account_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height_48"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/view_space_10"
                android:layout_marginRight="@dimen/view_space_22"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="left|center"
                android:hint="@string/hint_phone_num"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="#c1c1c1"
                android:textCursorDrawable="@drawable/shape_common_cursor"
                android:textSize="@dimen/text_size_18" />


        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size_0.5"
            android:layout_below="@+id/phone_ll"
            android:layout_marginLeft="@dimen/view_space_22"
            android:layout_marginRight="@dimen/view_space_22"
            android:background="@color/diver_bg" />

        <LinearLayout
            android:id="@+id/password_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view">

            <ImageView
                android:layout_width="@dimen/view_space_16"
                android:layout_height="@dimen/view_space_16"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/view_space_22"
                android:src="@drawable/icon_login_lock">

            </ImageView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_height_48"
                    android:layout_marginLeft="@dimen/view_space_10"
                    android:layout_marginRight="@dimen/view_space_22"
                    android:background="@null"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="left|center"
                    android:hint="@string/hint_password_num"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="#c1c1c1"
                    android:textCursorDrawable="@drawable/shape_common_cursor"
                    android:textSize="@dimen/text_size_18" />

                <ImageView
                    android:id="@+id/password_look_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/view_height_48"
                    android:layout_gravity="center|right"
                    android:layout_marginRight="@dimen/view_space_22"
                    android:paddingRight="@dimen/view_space_4"
                    android:src="@drawable/ic_close_eye"
                    android:visibility="gone" />

            </FrameLayout>

        </LinearLayout>

        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size_0.5"
            android:layout_below="@+id/password_ll"
            android:layout_marginLeft="@dimen/view_space_22"
            android:layout_marginRight="@dimen/view_space_22"
            android:background="@color/diver_bg" />


        <Button
            android:id="@+id/login_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_44"
            android:layout_below="@+id/view_1"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/view_space_22"
            android:layout_marginTop="@dimen/view_space_28"
            android:layout_marginRight="@dimen/view_space_22"
            android:layout_marginBottom="@dimen/view_space_8"
            android:background="@drawable/selector_login_btn"
            android:text="@string/login_message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_16" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_btn">

            <TextView
                android:id="@+id/login_sms_verification_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/view_space_12"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/view_space_10"
                android:text="@string/verification_login"
                android:textColor="@color/color_3"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/forgot_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/view_space_12"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/view_space_10"
                android:text="@string/forgot_password"
                android:textColor="@color/color_3"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>